Add QuickStart guide and GitHub link for accessibility
Updated the Readme with a QuickStart section, allowing users to access DNAHacker directly in their browser without installation. Added a GitHub repository link to the index.html for easier navigation to the project's source code.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>DNAHacker</h1>
+    <div class="github-badge">
+        <a href="https://github.com/hartmark/DnaHacker/" target="_blank">
+            <img src="https://img.shields.io/badge/GitHub-Repository-blue?logo=github" alt="GitHub Repository">
+        </a>
+    </div>
 
     <section id="dataLoadingStatus">
         <p>Loading interpretation data...</p>
